opam-version: "1.2"
name: "clock"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/dune-virtual-library/"
bug-reports: "https://github.com/ghuysmans/dune-virtual-library/issues"
dev-repo: "git://github.com/ghuysmans/dune-virtual-library/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "Sample Dune virtual library"
depends: [
  "dune" {build}
  "unix"
]
